<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:text="@string/title_name"
        android:textSize="25dp"/>
    <TextView
        android:id="@+id/littletitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/littlet_name"
        android:textSize="10dp"
        />
    <EditText
        android:id="@+id/et_1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/littletitle"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:hint="账号"
        android:inputType="text"
        />
    <EditText
        android:id="@+id/et_2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/et_1"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:hint="密码"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/logonbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_2"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="25dp"
        android:text="@string/logonbtn_name"
        android:textSize="20dp"
        android:textColor="@color/colorWhite"
        android:background="@drawable/bg_btn"
        />

</RelativeLayout>
